--- a/index.html
+++ b/index.html
@@ -14,21 +14,31 @@
             <h3>Header Logo</h3>
            </div>
            <div class="header-link one">
-            <a href=""><h4>Header link </h4></a>
+            <a href=""><h3>header link one </h3></a>
            </div>
            <div class="header-link two">
-            <a href=""><h4>Header link </h4></a>
+            <a href=""><h3>header link two</h3></a>
            </div>
            <div class="header-link three">
-            <a href=""><h4>Header link </h4></a>
+            <a href=""><h3>header link three</h3></a>
            </div>
-        <!-- </div>
-        <div class="content navbar-left">
-            <h1>This website is awesome</h1>
-            <img src="" alt="">
-            <button>Sign up</button>
+        </div>
+        <div class="content-navbar">
+            <div class="left-side-nav">
+                <h1>This website is awesome</h1>
+                <div class="sub-text">
+                    <sub>This website has some subtext that goes under the main title. It is a smaller font and color is lower contrast</sub>
+                </div>
+                <div class="button-top">
+                    <button>Sign up</button>
+                </div>
+            </div>
+            <div class="content navbar image">
+                <p class="placeholder">this is a placeholder for an image</p>
+                <!-- <img src="" alt="" height="400px" width="600px"> -->
+            </div>
         </div> 
-        <div class="some-random-information"> 
+        <!-- <div class="some-random-information"> 
             <h2>Some random information</h2>
             <div class="image 1">
                 <img src="" alt=""><sub>there is some subtext under an ilustration or image</sub>
@@ -51,7 +61,7 @@
         </div>
         <div class="footer">
             <p class="copy-right">Copyright @MateWojno 2022</p>
-        </div> -->
+        </div>  -->
     </div>
 </body>
 </html>
