--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="content">
         <div class="navbar">
            <div class="header-logo">
-            <h3>Header Logo</h3>
+            <a href=""><h3>Header Logo</h3></a>
            </div>
            <div class="header-link one">
             <a href=""><h3>header link one </h3></a>
@@ -38,30 +38,11 @@
                 <!-- <img src="" alt="" height="400px" width="600px"> -->
             </div>
         </div> 
-        <!-- <div class="some-random-information"> 
-            <h2>Some random information</h2>
-            <div class="image 1">
-                <img src="" alt=""><sub>there is some subtext under an ilustration or image</sub>
-            </div>
-            <div class="image 2">
-                <img src="" alt=""><sub>there is some subtext under an ilustration or image</sub>
-            </div>
-            <div class="image 3">
-                <img src="" alt=""><sub>there is some subtext under an ilustration or image</sub>
-            </div>
-            <div class="image 4">
-                <img src="" alt=""><sub>there is some subtext under an ilustration or image</sub>
-            </div>
-        </div>
-        <div class="quote">
-            <pre>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe </pre>
-        </div>
-        <div class="bottom-action-button">
-            <h1>Call to action! <button>Sign in</button></h1>
-        </div>
-        <div class="footer">
-            <p class="copy-right">Copyright @MateWojno 2022</p>
-        </div>  -->
     </div>
+    <!-- <div class="some-random-information">
+        <div class="sri-1"> <h1>Some random information</h1></div>
+        <div class="sri-2"> </div>
+        <div class="sri-2"> </div>
+    </div> -->
 </body>
 </html>
