Fixed structure of html;
ToDo:
1/  use flex properly - css;
    parent 1-4 are flex 3 1 0, parent-5 is flex 1 1 0;
2/  align and justify properly;
3/  fix issue with background color of #parents;

--- a/index.html
+++ b/index.html
@@ -8,37 +8,57 @@
     <title>Landing-Page-Odin</title>
 </head>
 <body>
-    <div class="content">
-        <div class="navbar">
-           <div class="header-logo">
-            <a href=""><h3>Header Logo</h3></a>
-           </div>
-           <div class="header-link one">
-            <a href=""><h3>header link one </h3></a>
-           </div>
-           <div class="header-link two">
-            <a href=""><h3>header link two</h3></a>
-           </div>
-           <div class="header-link three">
-            <a href=""><h3>header link three</h3></a>
-           </div>
+    <div id="grandparent">
+        <div id="parent-1">
+            <div class="p1-content">
+                <div class="navbar">
+                   <div class="header-logo">
+                    <a href=""><h3>Header Logo</h3></a>
+                   </div>
+                   <div class="header-link one">
+                    <a href=""><h3>header link one </h3></a>
+                   </div>
+                   <div class="header-link two">
+                    <a href=""><h3>header link two</h3></a>
+                   </div>
+                   <div class="header-link three">
+                    <a href=""><h3>header link three</h3></a>
+                   </div>
+                </div>
+                <div class="content-navbar">
+                    <div class="left-side-nav">
+                        <h1>This website is awesome</h1>
+                        <div class="sub-text">
+                            <sub>This website has some subtext that goes under the main title. It is a smaller font and color is lower contrast</sub>
+                        </div>
+                        <div class="button-top">
+                            <button>Sign up</button>
+                        </div>
+                    </div>
+                    <div class="content navbar image">
+                        <p class="placeholder">this is a placeholder for an image</p>
+                        <!-- <img src="" alt="" height="400px" width="600px"> -->
+                    </div>
+                </div> 
+            </div>
         </div>
-        <div class="content-navbar">
-            <div class="left-side-nav">
-                <h1>This website is awesome</h1>
-                <div class="sub-text">
-                    <sub>This website has some subtext that goes under the main title. It is a smaller font and color is lower contrast</sub>
-                </div>
-                <div class="button-top">
-                    <button>Sign up</button>
+        <div id="parent-2">
+            <div class="p2-content"> </div>
+        </div>
+        <div id="parent-3">
+            <div class="p3-content"> </div>
+        </div>
+        <div id="parent-4">
+            <div class="p4-content"> </div>
+        </div>
+        <div id="parent-5">
+            <div class="p5-content">
+                <div class="p5-footer">
+                    <footer>Copyright @MateWojno 2022</footer>
                 </div>
             </div>
-            <div class="content navbar image">
-                <p class="placeholder">this is a placeholder for an image</p>
-                <!-- <img src="" alt="" height="400px" width="600px"> -->
-            </div>
-        </div> 
+        </div>
     </div>
-    
+
 </body>
 </html>
