--- a/index.html
+++ b/index.html
@@ -43,13 +43,27 @@
             </div>
         </div>
         <div id="parent-2">
-            <div class="p2-content"> </div>
+            <div class="p2-content"> 
+                <div class="p2-header">
+                    <h2 class="p2-h">Some random information</h2>
+                </div>
+                <div class="p2-img-containers">
+                    <div class="p2-img-1"></div>
+                    <div class="p2-img-2"></div>
+                    <div class="p2-img-3"></div>
+                    <div class="p2-img-4"></div>
+                </div>
+            </div>
         </div>
         <div id="parent-3">
-            <div class="p3-content"> </div>
+            <div class="p3-content"> 
+                <div class="p3-test"></div>
+            </div>
         </div>
         <div id="parent-4">
-            <div class="p4-content"> </div>
+            <div class="p4-content"> 
+                <div class="p4-test"></div>
+            </div>
         </div>
         <div id="parent-5">
             <div class="p5-content">
@@ -59,6 +73,5 @@
             </div>
         </div>
     </div>
-
 </body>
 </html>
