--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                     </div>
                     <div class="content navbar image">
                         <p class="placeholder">this is a placeholder for an image</p>
-                        <!-- <img src="" alt="" height="400px" width="600px"> -->
                     </div>
                 </div> 
             </div>
@@ -48,10 +47,12 @@
                     <h2 class="p2-h">Some random information</h2>
                 </div>
                 <div class="p2-img-containers">
-                    <div class="p2-img-1"></div>
-                    <div class="p2-img-2"></div>
-                    <div class="p2-img-3"></div>
-                    <div class="p2-img-4"></div>
+                    <div class="p2-img">
+                        <sub class="p2-sub">There is some subtext under an illustration or image</sub>
+                        <sub class="p2-sub">There is some subtext under an illustration or image</sub>
+                        <sub class="p2-sub">There is some subtext under an illustration or image</sub>
+                        <sub class="p2-sub">There is some subtext under an illustration or image</sub>
+                    </div>
                 </div>
             </div>
         </div>
