Parent-2 structure done.
Done:
1/  structure and header positioning is decent;

ToDo:
2/  fill the gaps with photos;
    - fix flex on photo containers;
    - crop images to fit;
    - fix margin issues;
    - devise better border style for photo-containers;

3/  proceed with other parents structure;

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
                         </div>
                     </div>
                     <div class="content navbar image">
-                        <p class="placeholder">this is a placeholder for an image</p>
+                        <figure class="placeholder">
+                            <figcaption>
+                                <p class="placeholder">this is a placeholder for an image</p>
+                            </figcaption>
+                        </figure>
                     </div>
                 </div> 
             </div>
@@ -48,10 +52,18 @@
                 </div>
                 <div class="p2-img-containers">
                     <div class="p2-img">
-                        <sub class="p2-sub">There is some subtext under an illustration or image</sub>
-                        <sub class="p2-sub">There is some subtext under an illustration or image</sub>
-                        <sub class="p2-sub">There is some subtext under an illustration or image</sub>
-                        <sub class="p2-sub">There is some subtext under an illustration or image</sub>
+                        <figure class="p2-sub">
+                            <img class="p2-sub-image" src="" alt="photo from pexels"><hr>
+                            <figcaption><p class="p2-cap">There is some subtext under an illustration or image</p></figcaption>
+                        </figure>
+                        <figure class="p2-sub">
+                            <img class="p2-sub-image" src="" alt="photo from pexels"><hr>
+                            <figcaption><p class="p2-cap">There is some subtext under an illustration or image</p></figcaption>
+                        </figure>
+                        <figure class="p2-sub">
+                            <img class="p2-sub-image" src=""" alt="photo from pexels"><hr>
+                            <figcaption><p class="p2-cap">There is some subtext under an illustration or image</p></figcaption>
+                        </figure>
                     </div>
                 </div>
             </div>
