--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <figcaption><p class="p2-cap">There is some subtext under an illustration or image</p></figcaption>
                         </figure>
                         <figure class="p2-sub">
-                            <img class="p2-sub-image" src=""" alt="photo from pexels"><hr>
+                            <img class="p2-sub-image" src="" alt="photo from pexels"><hr>
                             <figcaption><p class="p2-cap">There is some subtext under an illustration or image</p></figcaption>
                         </figure>
                     </div>
@@ -70,7 +70,16 @@
         </div>
         <div id="parent-3">
             <div class="p3-content"> 
-                <div class="p3-test"></div>
+                <div class="p3-cite">
+                    <figure class="p3-fig">
+                        <blockquote>
+                            <p class="p3-p"><i class="p3-p">I love those who can smile in trouble, who can gather strength from distress, and grow brave by reflection. 'Tis the business of little minds to shrink, but they whose heart is firm, and whose conscience approves their conduct, will pursue their principles unto death.</i></p>
+                        </blockquote>
+                        <figcaption class="p3-figc">
+                            <cite><a class="p3-figc" href="https://www.inc.com/kevin-daum/20-quotes-from-leonardo-da-vinci-to-inspire-you.html">- Leonardo Da Vinci</a></cite>
+                        </figcaption>
+                    </figure>
+                </div>
             </div>
         </div>
         <div id="parent-4">
