Parent-5 done. Page is almost finished.
ToDo:
1/  fill the content;
a/  parent-1:
    -   navbar with my Logo, links to about me, projects, contact;
    -   "this website is..." to "Coding is awesome!";
    -   img-placeholder swap it with coding-img from pexels;
    -   subtext "this website has some..." to "I started coding about <date>, my biggest trophy now is..."
    -   "sign up" to "contact-me" button;

b/  parent-2:
    -   "some random information" to "my biggest projects";
    -   "there is some subtext..." to <project description>;

c/  parent-3 done;
d/  parent-4 - change txt header, p, and button;
e/  parent-5 done;

2/  fix parent-2;

--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
         </div>
         <div id="parent-5">
             <div class="p5-content">
-                <div class="p5-footer">
-                    <footer>Copyright @MateWojno 2022</footer>
-                </div>
+                    <footer class="p5-footer">Copyright @MateWojno 2022</footer>
             </div>
         </div>
     </div>
