Parent-1 filled with content.
ToDo:
1/  find decent photo, crop it and upload;
    -   rethink the subtext;
    -   even header with photo-placeholder;
2/  continue filling content;

--- a/index.html
+++ b/index.html
@@ -13,26 +13,29 @@
             <div class="p1-content">
                 <div class="navbar">
                    <div class="header-logo">
-                    <a href=""><h3>Header Logo</h3></a>
+                    <a href="https://github.com/MateWojno" title="GitHub link"><h3>MateWojno</h3></a>
                    </div>
                    <div class="header-link one">
-                    <a href=""><h3>header link one </h3></a>
+                    <a href="./resume/Mateusz-K-Wojno.pdf" title="Open my Resume file"><h3>About me</h3></a>
                    </div>
                    <div class="header-link two">
-                    <a href=""><h3>header link two</h3></a>
+                    <a href="#parent-2" title="Skip to projects section"><h3>Projects</h3></a>
                    </div>
                    <div class="header-link three">
-                    <a href=""><h3>header link three</h3></a>
+                    <a href="mailto:mateusz.k.wojno@gmail.com" title="Open email software"><h3>Contact</h3></a>
                    </div>
                 </div>
                 <div class="content-navbar">
                     <div class="left-side-nav">
-                        <h1>This website is awesome</h1>
+                        <h1>Coding is awesome</h1>
                         <div class="sub-text">
-                            <sub>This website has some subtext that goes under the main title. It is a smaller font and color is lower contrast</sub>
+                            <sub>I am quitting my in-house lawyer job to become a programmer.<br>
+                            I started coding on 26th of July 2022.<br><hr>
+                            Help me achieve my goals - send some feedback.
+                            </sub>
                         </div>
                         <div class="button-top">
-                            <button>Sign up</button>
+                            <button><a class="parent-1-a" href="mailto:mateusz.k.wojno@gmail.com">Mail me</a></button>
                         </div>
                     </div>
                     <div class="content navbar image">
