Parent-1 subtext done. Margin fixed;
ToDo:
1/  fix header-link positions;
    -   continue;

--- a/index.html
+++ b/index.html
@@ -13,25 +13,23 @@
             <div class="p1-content">
                 <div class="navbar">
                    <div class="header-logo">
-                    <a href="https://github.com/MateWojno" title="GitHub link"><h3>MateWojno</h3></a>
+                    <a href="https://github.com/MateWojno" title="GitHub link"><h3 class="p-1-h3">MateWojno</h3></a>
                    </div>
                    <div class="header-link one">
-                    <a href="./resume/Mateusz-K-Wojno.pdf" title="Open my Resume file"><h3>About me</h3></a>
+                    <a href="./resume/Mateusz-K-Wojno.pdf" title="Open my Resume file"><h3 class="p-1-h3">About me</h3></a>
                    </div>
                    <div class="header-link two">
-                    <a href="#parent-2" title="Skip to projects section"><h3>Projects</h3></a>
+                    <a href="#parent-2" title="Skip to projects section"><h3 class="p-1-h3">Projects</h3></a>
                    </div>
                    <div class="header-link three">
-                    <a href="mailto:mateusz.k.wojno@gmail.com" title="Open email software"><h3>Contact</h3></a>
+                    <a href="mailto:mateusz.k.wojno@gmail.com" title="Open email software"><h3 class="p-1-h3">Contact</h3></a>
                    </div>
                 </div>
                 <div class="content-navbar">
                     <div class="left-side-nav">
-                        <h1>Coding is awesome</h1>
+                        <h1 class="p1-h1">Coding is awesome</h1>
                         <div class="sub-text">
-                            <sub>I am quitting my in-house lawyer job to become a programmer.<br>
-                            I started coding on 26th of July 2022.<br><hr>
-                            Help me achieve my goals - send some feedback.
+                            <sub class="sub-text">I am quitting my in-house lawyer job to become a programmer. <br> Help me achieve this via sending some feedback.
                             </sub>
                         </div>
                         <div class="button-top">
@@ -51,7 +49,7 @@
         <div id="parent-2">
             <div class="p2-content"> 
                 <div class="p2-header">
-                    <h2 class="p2-h">Some random information</h2>
+                    <h2 class="p2-h">My GitHub projects</h2>
                 </div>
                 <div class="p2-img-containers">
                     <div class="p2-img">
