Parent-1 margin fix;
ToDo:
1/  decrease the space for parent-2 and parent-4;
    -   fix parent-2 issues;
2/  fix background-color issue;
3/  prep images;

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
                    <div class="header-logo">
                     <a href="https://github.com/MateWojno" title="GitHub link"><h3 class="p-1-h3">MateWojno</h3></a>
                    </div>
-                   <div class="header-link one">
+                   <div class="header-link-one">
                     <a href="./resume/Mateusz-K-Wojno.pdf" title="Open my Resume file"><h3 class="p-1-h3">About me</h3></a>
                    </div>
-                   <div class="header-link two">
+                   <div class="header-link-two">
                     <a href="#parent-2" title="Skip to projects section"><h3 class="p-1-h3">Projects</h3></a>
                    </div>
-                   <div class="header-link three">
+                   <div class="header-link-three">
                     <a href="mailto:mateusz.k.wojno@gmail.com" title="Open email software"><h3 class="p-1-h3">Contact</h3></a>
                    </div>
                 </div>
