Parent-1 done. Cat-meme cropped;
1/  fix parent-2:
    -   crop photos and update figc;
    -   figure out border style;
    -   make this section bigger;

--- a/index.html
+++ b/index.html
@@ -37,11 +37,7 @@
                         </div>
                     </div>
                     <div class="content navbar image">
-                        <figure class="placeholder">
-                            <figcaption>
-                                <p class="placeholder">this is a placeholder for an image</p>
-                            </figcaption>
-                        </figure>
+                        <img class="placeholder" src="/img/cat-pexels-tranmautritam-min.jpg" alt="Cat coder meme">
                     </div>
                 </div> 
             </div>
