--- a/index.html
+++ b/index.html
@@ -50,16 +50,16 @@
                 <div class="p2-img-containers">
                     <div class="p2-img">
                         <figure class="p2-sub">
-                            <img class="p2-sub-image" src="" alt="photo from pexels"><hr>
-                            <figcaption><p class="p2-cap">There is some subtext under an illustration or image</p></figcaption>
+                            <img class="p2-sub-image" src="./img/proper-coder-pexels-faizur-rehman-min.jpg" alt="proper-code"><hr>
+                            <figcaption><p class="p2-cap"><a class="p2-anchor" href="https://github.com/MateWojno/Return-To-Gipath">Return to Gipath</a><br> Evil Islands Mod</p></figcaption>
                         </figure>
                         <figure class="p2-sub">
-                            <img class="p2-sub-image" src="" alt="photo from pexels"><hr>
-                            <figcaption><p class="p2-cap">There is some subtext under an illustration or image</p></figcaption>
+                            <img class="p2-sub-image" src="./img/woman-book-pexels-christina-morillo-min.jpg" alt="photo from pexels"><hr>
+                            <figcaption><p class="p2-cap"><a class="p2-anchor" href="https://github.com/MateWojno/Python-Basics">Python basics</a><br> My first language study</p></figcaption>
                         </figure>
                         <figure class="p2-sub">
-                            <img class="p2-sub-image" src="" alt="photo from pexels"><hr>
-                            <figcaption><p class="p2-cap">There is some subtext under an illustration or image</p></figcaption>
+                            <img class="p2-sub-image" src="./img/woman-coder-pexels-christina-morillo-min.jpg" alt="photo from pexels"><hr>
+                            <figcaption><p class="p2-cap"><a class="p2-anchor" href="https://github.com/MateWojno/cs-itc">Computer Science</a><br> ITC and Programming study</p></figcaption>
                         </figure>
                     </div>
                 </div>
