Page ready to publish.
Fixed:
-   parent 2 && 3 rounded corners;

ToDo:
-   make this page responsive;
-   add nice like counter with animation;
-   fix margin and positioning issues;

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
             <div class="p4-content"> 
                 <div class="p4-button-container">
                     <div class="p4-button-item">
-                        <h2 class="p4-h2">Call to action! It'is time!</h2>
-                        <p class="p4-b-p">Sign up for our product by clicking that button right over there!</p>
+                        <h2 class="p4-h2">I hope you like what you see!</h2>
+                        <p class="p4-b-p">If yes, then send me some feedback by clicking that button right over there!</p>
                     </div>
                     <div class="p4-button-right">
-                        <button class="p4-b-btn">Sign up</button>
+                        <button class="p4-b-btn"><a class="parent-1-a" href="mailto:mateusz.k.wojno@gmail.com" title="There will be like counter soon with some animation. Atm you can do it manually">Like it</a></button>
                     </div>
                 </div>
             </div>
