Typo fix - cat-coder-meme

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                     <div class="content navbar image">
-                        <img class="placeholder" src="/img/cat-pexels-tranmautritam-min.jpg" alt="Cat coder meme">
+                        <img class="placeholder" src="./img/cat-pexels-tranmautritam-min.jpg" alt="Cat coder meme">
                     </div>
                 </div> 
             </div>
